# aurora-projectm-visualizer

./: .gitignore  AuroraVisualizer  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GEMINI-2.5-PRO_INCOMPLETE-TASK-QUEUE.md  GEMINI.md  IDEAS.md  Makefile  README.md  TODO.md  USAGE.md  build.sh  build_and_git.sh  favorites.txt  gdb-debug.sh  imgui.ini  project_structure_improvements.md
.github/workflows/: main.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
AuroraVisualizer_autogen/: deps
config/: default.toml  favorites.txt  presets.txt
docs/: GIT_USAGE.md  GUI_Development.md  IDEAS.md  TASK_QUEUE.md  TODO.md  configuration.md  other-version-source-code-bak.md  project_overview.md  roadmap.md
docs/architecture/: cli_core.md  gui_blueprint.md
docs/code_health/: cmake_improvements.md  repository_quick_wins.md
docs/components/: animation_manager.md  cli_parser.md  config_loader.md  core_module.md  gui_module.md  imgui_integration.md  preset_manager.md  renderer_module.md  text_manager.md  text_renderer.md  video_exporter.md
docs/features/: video_exporter.md
include/: AboutDialog.h  AnimationManager.h  CliParser.h  Config.h  ConfigLoader.h  Gui.h  ImGuiIntegration.h  MainWindow.h  PlaylistWidget.h  ProjectMWidget.h  QtGui.h  QtOpenGLWidget.h  SettingsWidget.h  TextManager.h  TextRenderer.h  VideoExporter.h  audio_input.h  config.h  config.h.in  core.h  event_handler.h  moc_ProjectMWidget.cpp  moc_ProjectMWidget.cpp_parameters  moc_QtGui.cpp  moc_QtGui.cpp_parameters  moc_QtOpenGLWidget.cpp  moc_QtOpenGLWidget.cpp_parameters  opengl.h  preset_manager.h  renderer.h  version.h  version.h.in
include/backends/: audio_backend.h  display_backend.h
include/utils/: Logger.h  common.h  gl_utils.h
scripts/: commit-or-overwrite-with-working-copy-code.sh  commit.sh  create_videos.py  llm-prompt-build-from-source.sh  record-and-play-random-song-from-music-new.sh  record-and-play-random-song-from-music-newer.sh  record-and-play-random-song-from-music.sh
src/: AboutDialog.cpp  AnimationManager.cpp  CliParser.cpp  ConfigLoader.cpp  Gui.cpp  ImGuiIntegration.cpp  MainWindow.cpp  PlaylistWidget.cpp  ProjectMWidget.cpp  QtGui.cpp  QtOpenGLWidget.cpp  SettingsWidget.cpp  TextManager.cpp  TextRenderer.cpp  VideoExporter.cpp  audio_input.cpp  core.cpp  event_handler.cpp  main.cpp  preset_manager.cpp  renderer.cpp
src/backends/: audio_backend.cpp  display_backend.cpp
src/utils/: Logger.cpp  common.cpp  gl_utils.cpp
